<resources>
    <string name="app_name">Real Business</string>
    <string name="real_business_academy">Real Business Academy</string>
    <string name="_11_45">11:45</string>
    <string name="keyingisi">Keyingisi...</string>
    <string name="murojaat_uchun">Murojaat uchun</string>
    <string name="tel_998_33_227_09_95">Tel: +998 33 227 09 95</string>
    <string name="tel_998_33_227_0995">Tel: +998 33 227 09 95</string>
    <string name="boshlash">Boshlash</string>
    <string name="tel_998_33_2270995">Tel: +998 33 227 09 95</string>
    <string name="malumot">Malumot</string>
    <string name="exit">Exit</string>
    <string name="tel_998_33227_09_95">Tel: +998 33 227 09 95</string>
    <string name="RealBusinessText">🤔 Qanday qilib biznes boshlasam ekan degan savolga Real Biznes Akademiya javob beradi. Real Business Academy sizga biznes egasi bo\'lishga yordam beradi. 💰 Invistitsiya kerakmi? Biz tayyormiz foizsiz va muddatsiz 100 ming dolargacha invistitsiya berishga. 💸 Uzum Marketda katta daromad qilishni o\'rgatamiz va Kafolat Beramiz 💵 Pul tikmasdan Biznes Qilishni O\'rgatamiz 📕 Kurslarimiz 4 oy davom etadi. 4 oylik kurslarimizda nimalar otiladi. ✅ Menejment ✅ Marketing ✅ Buxgalteriya ✅ Sotuv ✅ HR ✅ IT ✅ Moliya Murojaat uchun: 📞 +998555036100 👉 https://taplink.cc/realbusiness</string>
    <string name="todo">TODO</string>
    <string name="real_businesstext2">Real Biznes Akademiyasi sizga biznes egasi bo\'lishga yordam beradi. Sizga 4 oylik kurslarimizni taklif etamiz. 4 oylik kurslarimizda siz o\'z biznesingizni boshlaysiz yoki egasi bo\'lasiz siz o\'z biznesingizni rivojlantirasiz va biz barcha kamchiliklarni yoq qilib beramiz.</string>
    <string name="calendar">Calendar</string>
    <string name="video_1">Video-1</string>
    <string name="video_2">Video-2</string>
    <string name="video_3">Video-3</string>
    <string name="real_bzinesstext4">Real Biznes akademiyasi bilan 4 oyda mustaqil pul jamg\'arishni boshlang 🤑</string>
    <string name="real_bzinestext5">▪️ Uzum marketda maxsulot sotish orqali foydaga chiqish; ▪️ Muammosiz tarzda 50 ming dollargacha investitsiya qo\'lga kiritish; ▪️ Moliya, menejment, marketing sohasida tajribalar oshirish; ▪️Sotuv, buxgalteriya, HR va IT bo\'yicha puxta bilimlarni egallash.</string>
    <string name="real_bzines1">4 oy kurslarimizda oqing va boyib keting. Bizning eng tajribali biznesmen ustozlarimiz dars beradi, ular orasida Ilxom Begimkulov otadilar. Kurslarda oqib bolgandan song sizga , BIZNES boshlashga 100ming dollar invistitsiya ajratiladi. Qiziq bo\'lsa yozing.</string>
    <string name="real_bziens2">Qanday qilib biznes boshlasam ekan degan savolga Real Biznes Akademiya javob beradi. Real Business Academy sizga biznes egasi bo\'lishga yordam beradi. Kurslarimiz 4 oy davom etadi. 4 oylik kurslarimizda nimalar otiladi. Menejment Marketing Bugalteriya Sotuv HR IT Moliya Pul tikmasdan Biznes Qilishni O\'rgatamiz Uzum Marketda katta daromad qilishni o\'rgatamiz va Kafolat Beramiz Do\'stlaringiz kabi mustaqil pul sarflashni va kelajakka mablag\' to\'plashni istaysiz. Ammo, haligacha pul topishni boshlamadingiz. Tayyor turing, sizga eng zo\'r yechimni taklif qilamiz ! Muammosiz tarzda 50 ming dollargacha investitsiya qo\'lga kiritish; Uzum marketda maxsulot sotish orqali foydaga chiqish; Pul tikmasdan Biznes Qilishni O\'rgatamiz .</string>
    <string name="real_bzines2">Real Biznes Akademiya siga yechim bola oladi. Keling manzil: 23 улица Фурката, Ташкент , Узбекистан</string>
    <string name="google_calendar">Google Calendar</string>
    <string name="ilhom_begimkulov_biografiya">Ilhom Begimkulov Biografiya</string>
    <string name="biznes_akademiya">Biznes Akademiya</string>
    <string name="shogirt_va_ilhom_begimkulov">Shogirt va Ilhom Begimkulov</string>
    <string name="sotuv">Sotuv</string>
    <string name="ibrohim_gulyamov">Ibrohim Gulyamov</string>
    <string name="real_biznes_akademiya_haqida">Real Biznes Akademiya haqida</string>
    <string name="toifali_odamlar">Toifali odamlar</string>
    <string name="kompaniya">Kompaniya</string>
</resources>